feat: added post ad route and Updated Swagger
