# routes/users.routes.js
@@ -4,8 +4,23 @@ const authMiddleware = require("../middlewares/auth.middilewares");
 
 const router = Router();
 
-router.get("/ads", authMiddleware, usersControllers.getAllAdUser);
-router.get("/ads/search", authMiddleware, usersControllers.searchAdsUSer);
-router.get("/ads/:adID", authMiddleware, usersControllers.getSingleAdUSer);
+router.get(
+  "/ads",
+  authMiddleware,
+  // #swagger.security = [{bearerAuth:[]}],
+  usersControllers.getAllAdUser
+);
+router.get(
+  "/ads/search",
+  authMiddleware,
+  // #swagger.security = [{bearerAuth:[]}],
+  usersControllers.searchAdsUSer
+);
+router.get(
+  "/ads/:adID",
+  authMiddleware,
+  // #swagger.security = [{bearerAuth:[]}],
+  usersControllers.getSingleAdUSer
+);
 
 module.exports = router;
