# routes/vendors.routes.js
@@ -5,13 +5,28 @@ const upload = require("../utils/multer.utils");
 
 const router = Router();
 
-router.get("/ads", authMiddleware, vendorControllers.getAllAdVendor);
-router.get("/ads/search", authMiddleware, vendorControllers.searchAdsVendor);
+router.get(
+  "/ads",
+  authMiddleware,
+  // #swagger.security = [{bearerAuth:[]}],
+  vendorControllers.getAllAdVendor
+);
+router.get("/ads/search", authMiddleware, 
+  // #swagger.security = [{bearerAuth:[]}],
+  vendorControllers.searchAdsVendor);
 router.get("/ads/:adID", authMiddleware, vendorControllers.getSingleAdVendor);
+router.post(
+  "/ads/",
+  authMiddleware,
+  upload.single("file"),
+  // #swagger.security = [{bearerAuth:[]}],
+  vendorControllers.addAdVendor
+);
 router.put(
   "/ads/:adID",
   authMiddleware,
   upload.single("file"),
+  // #swagger.security = [{bearerAuth:[]}],
   vendorControllers.updateAdVendor
 );
 router.delete("/ads/:adID", authMiddleware, vendorControllers.deleteAdVendor);
